--- a/client/src/app/components/carousel-card/carousel-card.component.html
+++ b/client/src/app/components/carousel-card/carousel-card.component.html
@@ -1,9 +1,11 @@
 <!--TODO: bind href to the appropriate local URL for the playlist.-->
-<a>
+<div class="d-flex">
 <!--TODO bind src with the playlist image URL-->
-<img class="d-block w-100">
-<div class="carousel-caption d-none d-md-block">
-	<!--TODO: populate h5 with the playlist name-->
-	<h5>???</h5>
+	<div style="width: 50px; height: 50px;">
+		<img class="w-100 h-100 rounded rounded-3" [src]="resource.imageURL" [alt]="resource.name">
+	</div>
+	<div class="ml-2" style="width: 300px;">
+		<h5 class="w-100 mb-0 text_ellipsis mb-1 font-weight-bold" style="font-size: 16px;">{{resource.name}}</h5>
+		<p class="w-100 mb-0 text_ellipsis" style="font-size: 12px;">{{resource.description}}</p>
+	</div>
 </div>
-</a>
