--- a/client/src/app/components/track-list/track-list.component.html
+++ b/client/src/app/components/track-list/track-list.component.html
@@ -1,9 +1,9 @@
-<table class="table table-sm table-light table-striped" *ngIf="tracks">
+<table class="table table-sm table-light table-striped w-100" *ngIf="tracks">
 	<thead>
 		<tr>
 			<th scope="col">#</th>
 			<th scope="col">Track</th>
-			<th scope="col">Duration</th>
+			<th scope="col">Duration(ms)</th>
 			<!--TODO: Use *ngIf to hide if hideArtist is true-->
 			<th scope="col">Primary Artist</th>
 			<!--TODO: Use *ngIf to hide if hideAlbum is true-->
@@ -12,19 +12,28 @@
 	</thead>
 	<tbody>
 		<!--TODO: Use *ngFor to loop over tracks-->
-		<tr>
+		<tr *ngFor="let track of tracks; let i = index">
 			<!--TODO: Populate with row index (start with 1!)-->
-			<td>???</td>
-			<td>
+			<td>{{i+1}}</td>
+			<!-- style="max-width: 210px;" -->
+			<td style="max-width: 210px;"  class="text_ellipsis">
+				{{track.name}}
 				<!--TODO: link to the endpoint for that track, display the track's name-->
-				<a>???</a>
+				<!-- <a class="text_ellipsis">{{track.name}}</a> -->
 			</td>
 			<!--TODO: display the track's duration-->
-			<td>???</td>
+			<td>{{track.duration_ms}}</td>
 			<!--TODO: Use *ngIf to hide if hideArtist is true; link to the first artist's endpoint and display the first artist's name-->
-			<td><a></a></td>
+			<td style="min-width: 110px;" class="text_ellipsis">
+				{{track.artists[0].name}}
+				<!-- <a></a> -->
+			</td>
 			<!--TODO: Use *ngIf to hide if hideAlbum is true; link to the album's endpoint and display the album's name-->
-			<td><a></a></td>
+			<!-- style="max-width: 150px;" -->
+			<td style="max-width: 150px;" class="text_ellipsis">
+				{{track.album.name}}
+				<!-- <a></a> -->
+			</td>
 		</tr>
 	</tbody>
 </table>
